# Lobot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/ball_trajectories/: bounce_comparison.nb  prediction_000005.csv  prediction_000011.csv  prediction_000014.csv  prediction_000016.csv  prediction_000018.csv  prediction_000022.csv  prediction_000025.csv  prediction_000026.csv  prediction_000027.csv  prediction_000028.csv  prediction_000029.csv  prediction_000030.csv  prediction_000031.csv  prediction_000038.csv  prediction_000039.csv  prediction_000040.csv  prediction_000045.csv  prediction_000046.csv  prediction_000047.csv  prediction_000048.csv  prediction_000049.csv  prediction_000052.csv  prediction_000053.csv  prediction_000057.csv  prediction_000058.csv  prediction_000059.csv  prediction_000060.csv  prediction_000062.csv  prediction_000064.csv  prediction_000067.csv  prediction_000068.csv  prediction_000074.csv  prediction_000079.csv  prediction_000081.csv  prediction_000083.csv  prediction_000084.csv  prediction_000090.csv  prediction_000091.csv  prediction_000093.csv  (+134 more)
assets/car_control/: RLBotIO.m  RLBotMisc.m  (+13 more)
inc/: .RL_structs.h.un~  .linalg.h.un~  .mat.h.un~  Ball.h  Barrier.h  Car.h  RL_structs.h~  bit_packing.h  bounce.h  constants.h  linalg.h  linalg.h~  mat.h  mat.h~  pitch.h  state.h  vec.h
src/: .main.cpp.un~  Ball.cpp  Car.cpp  bot.cpp  bvh.cpp  lobot.cpp  pitch.cpp  primitives.cpp
tests/: CMakeLists.txt
tests/python/: ball_test.py
tests/src/: aerial_controls.cpp  ball_bouncing.cpp  driving_controls.cpp  intersection.cpp  queries.cpp
(+423 files in other folders)
